Added endpoint to read limits in given domain