@@ -8,10 +8,11 @@ import net.geant.nmaas.kubernetes.remote.entities.KCluster;
 import net.geant.nmaas.kubernetes.remote.repositories.KClusterRepository;
 import net.geant.nmaas.orchestration.Identifier;
 import net.geant.nmaas.orchestration.entities.AppDeploymentSpec;
+import net.geant.nmaas.portal.api.exceptions.MissingElementException;
 import net.geant.nmaas.portal.domain.RejectionReason;
 import net.geant.nmaas.portal.domain.ResourcesLimitDto;
 import net.geant.nmaas.portal.domain.ResourcesLimitUpdateDto;
-import net.geant.nmaas.portal.api.exceptions.MissingElementException;
+import net.geant.nmaas.portal.domain.ResourcesLimitValidationResult;
 import net.geant.nmaas.portal.persistence.entity.AppInstance;
 import net.geant.nmaas.portal.persistence.entity.Domain;
 import net.geant.nmaas.portal.persistence.entity.ResourcesLimit;
@@ -20,7 +21,6 @@ import net.geant.nmaas.portal.persistence.repositories.AppInstanceRepository;
 import net.geant.nmaas.portal.persistence.repositories.DomainRepository;
 import net.geant.nmaas.portal.persistence.repositories.ResourcesLimitRepository;
 import net.geant.nmaas.portal.service.ResourcesLimitService;
-import net.geant.nmaas.portal.domain.ResourcesLimitValidationResult;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
@@ -119,10 +119,12 @@ public class ResourcesLimitServiceImpl implements ResourcesLimitService {
         resourcesLimitRepository.save(entity);
     }
 
+    @Override
     public void delete(Long id) {
         resourcesLimitRepository.deleteById(id);
     }
 
+    @Override
     public ResourcesLimitDto getResourcesLimit(Long id) {
         Optional<ResourcesLimit> entity = resourcesLimitRepository.findById(id);
         if (entity.isPresent()) {
@@ -132,8 +134,21 @@ public class ResourcesLimitServiceImpl implements ResourcesLimitService {
         }
     }
 
+    @Override
     public List<ResourcesLimitDto> getAllResourcesLimits() {
-        return resourcesLimitRepository.findAll().stream().map(entity -> modelMapper.map(entity, ResourcesLimitDto.class)).toList();
+        return resourcesLimitRepository.findAll().stream()
+                .map(entity -> modelMapper.map(entity, ResourcesLimitDto.class))
+                .toList();
+    }
+
+    @Override
+    public ResourcesLimitDto getDomainResourceLimit(Long domainId) {
+        Optional<ResourcesLimit> entity = resourcesLimitRepository.findByDomain_Id(domainId);
+        if (entity.isPresent()) {
+            return modelMapper.map(entity.get(), ResourcesLimitDto.class);
+        } else {
+            throw new MissingElementException("Resources Limit not found");
+        }
     }
 
     @Override
@@ -141,17 +156,17 @@ public class ResourcesLimitServiceImpl implements ResourcesLimitService {
                                                                 Identifier applicationId,
                                                                 int requestedInstances,
                                                                 AppDeploymentSpec deploymentSpec) {
-        ResourcesLimit limit = resourcesLimitRepository.findByDomain_Codename(domainCodename);
+        Optional<ResourcesLimit> limit = resourcesLimitRepository.findByDomain_Codename(domainCodename);
         List<ResourcesLimit> groupsLimits = resourcesLimitRepository.findForGroupsBasedOnDomain(domainCodename);
-        if (limit != null) {
-            return validateAgainst(false, limit, groupsLimits, domainCodename, requestedInstances, deploymentSpec);
+        if (limit.isPresent()) {
+            return validateAgainst(false, limit.get(), groupsLimits, domainCodename, requestedInstances, deploymentSpec);
         } else {
             List<ResourcesLimit> globalLimits = resourcesLimitRepository.findByLimitType(ResourcesLimitType.GLOBAL);
             if (!globalLimits.isEmpty()) {
-                return validateAgainst(true, globalLimits.get(0), groupsLimits, domainCodename, requestedInstances, deploymentSpec);
+                return validateAgainst(true, globalLimits.getFirst(), groupsLimits, domainCodename, requestedInstances, deploymentSpec);
             }
         }
-        ResourcesLimitValidationResult validationResult =  new ResourcesLimitValidationResult();
+        ResourcesLimitValidationResult validationResult = new ResourcesLimitValidationResult();
         validationResult.setAccepted(true);
         return validationResult;
     }
@@ -162,32 +177,32 @@ public class ResourcesLimitServiceImpl implements ResourcesLimitService {
                                                            String domainCodename,
                                                            int requestedInstances,
                                                            AppDeploymentSpec deploymentSpec) {
-        ResourcesLimitValidationResult validationResult =  new ResourcesLimitValidationResult();
+        ResourcesLimitValidationResult validationResult = new ResourcesLimitValidationResult();
         validationResult.setAccepted(true);
         List<AppInstance> runningDeployments = appInstanceRepository.findAllActiveInDomain(domainCodename);
 
-        if (limit.getInstancesNo() != null && (runningDeployments.size() + requestedInstances > limit.getInstancesNo()+ groupsLimits.stream().mapToInt(ResourcesLimit::getInstancesNo).sum())) {
+        if (limit.getInstancesNo() != null && (runningDeployments.size() + requestedInstances > limit.getInstancesNo() + groupsLimits.stream().mapToInt(ResourcesLimit::getInstancesNo).sum())) {
             validationResult.setAccepted(false);
             validationResult.getReasons().add(basedOnGlobal
-                            ? RejectionReason.GLOBAL_INSTANCES_LIMIT_REACHED
-                            : RejectionReason.DOMAIN_INSTANCES_LIMIT_REACHED);
+                    ? RejectionReason.GLOBAL_INSTANCES_LIMIT_REACHED
+                    : RejectionReason.DOMAIN_INSTANCES_LIMIT_REACHED);
         }
 
-        if (limit.getContainersNo() != null && (countRunningContainersInDomain(domainCodename) + deploymentSpec.getConsumedPods() > limit.getContainersNo()+ groupsLimits.stream().mapToInt(ResourcesLimit::getContainersNo).sum())) {
+        if (limit.getContainersNo() != null && (countRunningContainersInDomain(domainCodename) + deploymentSpec.getConsumedPods() > limit.getContainersNo() + groupsLimits.stream().mapToInt(ResourcesLimit::getContainersNo).sum())) {
             validationResult.setAccepted(false);
             validationResult.getReasons().add(basedOnGlobal
-                            ? RejectionReason.GLOBAL_CONTAINERS_LIMIT_REACHED
-                            : RejectionReason.DOMAIN_CONTAINERS_LIMIT_REACHED);
+                    ? RejectionReason.GLOBAL_CONTAINERS_LIMIT_REACHED
+                    : RejectionReason.DOMAIN_CONTAINERS_LIMIT_REACHED);
         }
 
-        if (limit.getCpu() != null && (runningDeployments.stream().mapToInt(x -> x.getApplication().getAppDeploymentSpec().getConsumedCpu()).sum() + deploymentSpec.getConsumedCpu() > limit.getCpu()+ groupsLimits.stream().mapToInt(ResourcesLimit::getCpu).sum())) {
+        if (limit.getCpu() != null && (runningDeployments.stream().mapToInt(x -> x.getApplication().getAppDeploymentSpec().getConsumedCpu()).sum() + deploymentSpec.getConsumedCpu() > limit.getCpu() + groupsLimits.stream().mapToInt(ResourcesLimit::getCpu).sum())) {
             validationResult.setAccepted(false);
             validationResult.getReasons().add(basedOnGlobal
                     ? RejectionReason.GLOBAL_CPU_LIMIT_REACHED
                     : RejectionReason.DOMAIN_CPU_LIMIT_REACHED);
         }
 
-        if (limit.getMemory() != null && (runningDeployments.stream().mapToInt(x -> x.getApplication().getAppDeploymentSpec().getConsumedMemory()).sum() + deploymentSpec.getConsumedMemory() > limit.getMemory()+ groupsLimits.stream().mapToInt(ResourcesLimit::getMemory).sum())) {
+        if (limit.getMemory() != null && (runningDeployments.stream().mapToInt(x -> x.getApplication().getAppDeploymentSpec().getConsumedMemory()).sum() + deploymentSpec.getConsumedMemory() > limit.getMemory() + groupsLimits.stream().mapToInt(ResourcesLimit::getMemory).sum())) {
             validationResult.setAccepted(false);
             validationResult.getReasons().add(basedOnGlobal
                     ? RejectionReason.GLOBAL_MEMORY_LIMIT_REACHED
